--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
       font-display:swap;
     }
 
-    :root{ --bg:#fff; --fg:#000; --maxw:1100px; --page-pad: clamp(16px,4vw,32px); }
+    :root{ --bg:#fff; --fg:#000; --maxw:1100px; }
     html,body{height:100%}
     body{
       margin:0; background:var(--bg); color:var(--fg);
       font-family:"WWF","Open Sans",system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji";
-      font-synthesis: weight style; /* da nur ein Schriftschnitt */
+      /* Erlaube künstliches Bold/Italic, da nur 1 Schnitt vorhanden ist */
+      font-synthesis: weight style;
       -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility;
       display:flex; flex-direction:column; min-height:100svh;
     }
@@ -34,7 +35,7 @@
     .site-header{ border-bottom:1px solid #e6e6e6; background:#fff; }
     .container{
       width:100%; max-width:var(--maxw); margin-inline:auto;
-      padding:clamp(12px,2.5vw,24px) var(--page-pad);
+      padding:clamp(12px,2.5vw,24px) clamp(16px,4vw,32px);
     }
     .header-inner{ display:flex; align-items:center; justify-content:flex-start; gap:16px; }
     .brand{ display:inline-flex; align-items:center; text-decoration:none; color:inherit; }
@@ -46,27 +47,16 @@
     h1{
       margin:0 0 clamp(8px,2vw,12px) 0;
       font-size:clamp(16px,2vw,20px);
-      line-height:1.3; font-weight:700; text-wrap:balance;
+      line-height:1.3; font-weight:700; text-wrap:balance; /* wird synthetisch fett */
       max-width:500px; margin-inline:auto;
     }
 
-    /* Desktop/Landscape Counter – FULL BLEED über die gesamte Viewport-Breite */
-    .counter-inline-wrap{
-      width:100vw;                 /* volle Breite */
-      margin-left:50%;             /* zentrierter Full-Bleed-„Trick“ */
-      transform:translateX(-50%);
-      padding-inline: var(--page-pad);
-      box-sizing:border-box;
-    }
+    /* Desktop/landscape counter (inline) */
     .counter-inline{
-      font-variant-numeric:tabular-nums;
-      letter-spacing:.02em;
-      font-weight:700;             /* synthetisch fett */
-      /* groß & responsive: auf Viewportbreite skalieren */
-      font-size: clamp(64px, 12vw, 220px);
-      line-height:1;
-      text-align:center;
-      white-space:nowrap;
+      font-variant-numeric:tabular-nums; letter-spacing:.02em;
+      font-weight:700; /* synthetisch fett */
+      font-size:clamp(48px,12vw,160px);
+      line-height:1; max-width:500px; margin-inline:auto;
     }
 
     /* Mobile portrait counter (stacked with labels on the right) */
@@ -79,7 +69,7 @@
         padding-block:0;
       }
       .hero .container{ width:100%; max-width:620px; }
-      .counter-inline-wrap{ display:none; } /* im Mobile verwenden wir das gestapelte Layout */
+      .counter-inline{ display:none; }
       .counter-stacked{
         display:grid;
         grid-template-columns: auto 1fr;
@@ -90,7 +80,7 @@
         margin-top: clamp(8px,3vh,24px);
       }
       .value{
-        font-weight:700;
+        font-weight:700; /* synthetisch fett */
         font-size: clamp(56px, 22vh, 180px);
         line-height:.9; justify-self:start;
       }
@@ -132,15 +122,11 @@
     <section class="hero">
       <div class="container">
         <h1>Time to reach a strong UN Plastics Treaty</h1>
-      </div>
 
-      <!-- Desktop/Querformat: FULL-BLEED über gesamte Breite -->
-      <div class="counter-inline-wrap">
+        <!-- Desktop/Querformat -->
         <div class="counter-inline" id="counterInline" aria-live="polite">00:00:00</div>
-      </div>
 
-      <!-- Mobile/Hochformat -->
-      <div class="container">
+        <!-- Mobile/Hochformat -->
         <div class="counter-stacked" aria-live="polite">
           <div class="value" id="hVal">00</div><div class="unit">Hours</div>
           <div class="value" id="mVal">00</div><div class="unit">Minutes</div>
