index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -20,34 +20,50 @@
       font-display:swap;
     }
 
-    :root{ --bg:#fff; --fg:#000; --maxw:1100px; }
+    :root{
+      --bg:#fff; --fg:#000; --maxw:1100px;
+      --page-pad: clamp(16px,4vw,32px);
+      /* Logo-Höhe wie auf wwf.de (responsive, sehr ähnlich) */
+      --logo-h: clamp(36px, 6vw, 64px);
+      --header-pad-y: clamp(10px, 1.8vw, 18px);
+      --header-border:#e6e6e6;
+    }
+
     html,body{height:100%}
     body{
       margin:0; background:var(--bg); color:var(--fg);
       font-family:"WWF","Open Sans",system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji";
-      /* Erlaube künstliches Bold/Italic, da nur 1 Schnitt vorhanden ist */
-      font-synthesis: weight style;
+      font-synthesis: weight style; /* da nur ein Schriftschnitt */
       -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility;
       display:flex; flex-direction:column; min-height:100svh;
     }
 
-    /* Header */
-    .site-header{ border-bottom:1px solid #e6e6e6; background:#fff; }
+    /* ============== Header (wie wwf.de, aber ohne Menü) ============== */
+    .site-header{
+      position: sticky; top:0; z-index:1000;
+      background:#fff;
+      border-bottom:1px solid var(--header-border);
+      /* dezenter Schatten wie bei Sticky-Navigationen */
+      box-shadow: 0 0 0 1px var(--header-border);
+    }
     .container{
       width:100%; max-width:var(--maxw); margin-inline:auto;
-      padding:clamp(12px,2.5vw,24px) clamp(16px,4vw,32px);
+      padding:clamp(12px,2.5vw,24px) var(--page-pad);
     }
-    .header-inner{ display:flex; align-items:center; justify-content:flex-start; gap:16px; }
-    .brand{ display:inline-flex; align-items:center; text-decoration:none; color:inherit; }
-    .brand img{ height:clamp(36px,6vw,64px); width:auto; display:block; }
+    .header-inner{
+      display:flex; align-items:center; justify-content:flex-start; gap:16px;
+      padding-block: var(--header-pad-y);
+    }
+    .brand{ display:inline-flex; align-items:center; color:inherit; text-decoration:none; }
+    .brand img{ height:var(--logo-h); width:auto; display:block; }
 
-    /* Main */
+    /* =================== Main =================== */
     main{ flex:1 }
     .hero{ text-align:center; padding-block:clamp(16px,4vw,32px); }
     h1{
       margin:0 0 clamp(8px,2vw,12px) 0;
       font-size:clamp(16px,2vw,20px);
-      line-height:1.3; font-weight:700; text-wrap:balance; /* wird synthetisch fett */
+      line-height:1.3; font-weight:700; text-wrap:balance; /* synthetisch fett */
       max-width:500px; margin-inline:auto;
     }
 
@@ -95,7 +111,7 @@
     /* Content */
     .content{ padding-block:clamp(16px,5vw,32px); }
 
-    /* Footer */
+    /* Footer – schwarz/weiß wie besprochen */
     .site-footer{ border-top:1px solid #333; background:#000; color:#fff; }
     .footer-links{ display:flex; flex-wrap:wrap; gap:12px 24px; align-items:center; }
     .footer-links a{
